crates/bitnet-cli/tests/snapshots/cli_snapshot_tests__model_help.snap
---
source: crates/bitnet-cli/tests/cli_snapshot_tests.rs
expression: help
---
Fetch, verify, list, and prune supported local model artifacts

Usage: bitnet model [OPTIONS] <COMMAND>

Commands:
  fetch      Fetch a supported model artifact into the local cache
  verify     Verify a cached or explicit supported model artifact
  contracts  Inspect BitNet-family model contracts and claim boundaries
  list       List supported model artifacts and cache status
  prune      Remove cached model artifacts
  help       Print this message or the help of the given subcommand(s)

Options:
  -c, --config <PATH>      Configuration file path
  -d, --device <DEVICE>    Device/backend label (cpu, cuda/gpu, hip/rocm, oneapi, npu/openvino-npu, nvidia-rtx-5070-ti-cuda/wgpu, metal/mpsgraph, apple-m4-metal, apple-m4-mpsgraph, apple-m4-cpu-neon, auto). Apple M4 labels are distinct proof lanes
      --log-level <LEVEL>  Log level (trace, debug, info, warn, error)
      --threads <N>        Number of CPU threads
      --batch-size <SIZE>  Batch size for processing
  -h, --help               Print help
