crates/bitnet-cli/tests/snapshots/cli_snapshot_tests__model_verify_help.snap
---
source: crates/bitnet-cli/tests/cli_snapshot_tests.rs
expression: help
---
Verify a cached or explicit supported model artifact

Usage: bitnet model verify [OPTIONS] <ID>

Arguments:
  <ID>  Supported model id

Options:
  -c, --config <PATH>      Configuration file path
      --path <PATH>        Verify this file instead of the cached path for the model id
      --cache-dir <PATH>   Override cache root. Defaults to ~/.cache/bitnet-rs/models
  -d, --device <DEVICE>    Device/backend label (cpu, cuda/gpu, hip/rocm, oneapi, npu/openvino-npu, nvidia-rtx-5070-ti-cuda/wgpu, metal/mpsgraph, apple-m4-metal, apple-m4-mpsgraph, apple-m4-cpu-neon, apple-m3-air-metal, apple-m3-air-mpsgraph, apple-m3-air-cpu-neon, auto). Apple M4 and M3 Air labels are distinct proof lanes
      --json               Emit JSON instead of text
      --log-level <LEVEL>  Log level (trace, debug, info, warn, error)
      --threads <N>        Number of CPU threads
      --batch-size <SIZE>  Batch size for processing
  -h, --help               Print help
