crates/bitnet-cli/tests/snapshots/cli_snapshot_tests__run_missing_required_args_error.snap
---
source: crates/bitnet-cli/tests/cli_snapshot_tests.rs
expression: err
---
error: the following required arguments were not provided:
  --model <MODEL>
  --prompt <PROMPT>

Usage: bitnet run --model <MODEL> --prompt <PROMPT>

For more information, try '--help'.
